src/styles/sass/_settings.scss
//////////////////////////////
// Settings View Sytles     //
//////////////////////////////
.settings-view {

  > .settings-menu {
    background-color: $mta-white;
    border-bottom: 0.0625rem solid $mta-gray-tint;
    box-shadow: 0 0 4px 1px transparentize($mta-gray-tint, 0.5);
    left: 0;
    margin: 0.25rem 0 0;
    padding: 0 1rem;
    position: relative;
    width: 100%;

    @media (min-width: 60rem) {
      width: 100%;
    }

    button {
      border: 0.0625rem solid $mta-green;
      border-radius: 0.375rem;
      font-size: 0.75rem;
      letter-spacing: 0.07rem;
      padding: 0.35rem;
      text-transform: uppercase;

      @media (min-width: 60rem) {
        width: auto;
        //font-size: 1vw;
      }

      // reverse the active state
      &.active {
        color: $nypl-white;
        background-color: $mta-green;
      }
    }

    > li {
      border: 0;
      color: $mta-dark-gray;
      display: inline-block;
      margin: 0.5rem 0.3rem 0.5rem 0;
      padding: 0;
      text-align: center;
      vertical-align: text-bottom;
      width: 100%;

      @media (min-width: 60rem) {
        display: inline-block;
        margin-right: 1%;
      }
    }

    > li:nth-child(3) {
      display: none;
      margin-right: 0;
    }

    .settings-options {
      padding-left: 0;

      @media (min-width: 60rem) {
        width: 100%;
      }

      li {
        border: 0;
        display: inline-block;
        margin: 0;
        width: auto;
      }

      .reading-style:nth-child(2) {
        margin-left: -0.7rem;
      }

      .font-setting {
        vertical-align: text-bottom;
      }

      button.columns-paginated-view {
        border-top-right-radius: 0;
        border-bottom-right-radius: 0;
        padding-left: 0.75rem;
        padding-right: 0.75rem;
      }

      button.scrolling-book-view {
        border-top-left-radius: 0;
        border-bottom-left-radius: 0;
        padding-left: 0.55rem;
      }

      .icon {
        color: $mta-green;
        fill: $mta-green;
        height: 1.75rem;
        width: 1.75rem;

        @media (min-width: 30rem) {
          height: 1.5rem;
          width: 1.5rem;
        }
      }

      .font-size-label {
        color: $mta-green;
        font-size: 1.125rem; // giving this a value even though it gets set by the application... seems like a good idea.
        position: relative;
        top: -0.5rem;
        margin: auto 0.4rem;
      }

      button.increase,
      button.decrease {
        background-color: $mta-white;
        border: 0;
        padding: 0;
      }

      button.increase {
        margin-left: 0.25vw;
      }

      button.decrease {
        margin-right: 0.25vw;
      }
    } // / settings-options
  }
}

